# legends

./: .env.example  .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  install.sh  notes.sh  pyproject.toml  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: defaults.yaml  timeline.example.yaml
docs/: 00-overview.md  01-installation.md  02-usage.md  03-timeline-mode.md  10-limitations.md
entrypoints/: legends_app.py
scripts/: bootstrap_repo.sh  build_binary_macos.sh  build_local.sh  commit_all.sh  install-macos.sh  install.sh  release_dry_run.sh  update_citation.py  verify_env.sh
src/legends/: __init__.py  cli.py  config.py  exceptions.py  utils.py
src/legends.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/legends/commands/: __init__.py  commit.py  commit_all.py  create_branch.py  create_repo.py  merge_pr.py  open_pr.py
src/legends/core/: __init__.py  dates.py  gh_cli.py  git_ops.py  merge_ops.py
src/legends/templates/: __init__.py  commit_message.txt  merge_message.txt  pr_body.md  pr_title.txt  review_body.md
