[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legends"
version = "0.0.0"
description = "Automate backdated Git history (repo, branches, commits, PRs, merges) using git + GitHub CLI."
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

[project.scripts]
legends = "legends.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["legends*"]

[tool.setuptools.package-data]
"legends.templates" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
