[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legends"
version = "0.2.0"
description = "Automate backdated Git history (repo, branches, commits, PRs, merges) using git + GitHub CLI."
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Boris Karaoglanov" }]

[project.scripts]
legends = "legends.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "build", "python-semantic-release", "pyinstaller>=6"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["legends*"]

[tool.setuptools.package-data]
"legends.templates" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.semantic_release]
allow_zero_version = true
commit_parser = "conventional"
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
build_command = "python -m pip install --upgrade pip build setuptools wheel && python -m build"
version_toml = ["pyproject.toml:project.version"]

version_variables = [
  'CITATION.cff:^\\s*version\\s*\\s*"(?P<version>\\d+\\.\\d+\\.\\d+([-+][0-9A-Za-z.]+)?)"\\s*$',
]

[tool.semantic_release.branches]
main = { match = "^main$", prerelease = false }
master = { match = "^master$", prerelease = false }
release = { match = "^release/.*$", prerelease = false }
packaging = { match = "^packaging$", prerelease = false }
